LUC070-87 : use of Stream.toList() method was causing problems as it returns Immutable Lists