@@ -3,6 +3,7 @@ package org.datavaultplatform.broker.initialise;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 import lombok.Getter;
 import lombok.ToString;
@@ -17,6 +18,6 @@ public class BrokerInitialisedEvent extends ApplicationEvent {
 
   public BrokerInitialisedEvent(Object source, ArchiveStore... added) {
     super(source);
-    this.added = Arrays.stream(added).filter(Objects::nonNull).toList();
+    this.added = Arrays.stream(added).filter(Objects::nonNull).collect(Collectors.toList());
   }
 }
