@@ -10,6 +10,7 @@ import org.springframework.stereotype.Service;
 
 import java.security.Principal;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @ConditionalOnBean(RestService.class)
@@ -27,12 +28,12 @@ public class PermissionsService {
 
         List<RoleAssignment> dashboardRoleAssignments = restService.getRoleAssignmentsForUser(principal.getName()).stream()
                 .filter(this::isDashboardRoleAssignment)
-                .toList();
+                .collect(Collectors.toList());
 
         for (RoleAssignment roleAssignment : dashboardRoleAssignments) {
             List<PermissionModel> permissions = roleAssignment.getRole().getPermissions().stream()
                     .filter(p -> p.getPermission().isDashboardPermission())
-                    .toList();
+                    .collect(Collectors.toList());
             for (PermissionModel permission : permissions) {
                 if (isGlobalPermission(roleAssignment, permission)) {
                     permissionsModel.addGlobalPermission(permission);
